--- a/css.css
+++ b/css.css
@@ -5,13 +5,16 @@
     top: 0;
     left: 0;
     overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .main {
+    
+    border-radius: 2%;
     text-align: center;
     background-color:coral;
     position: absolute;
-    top: 30%;
-    left: 30%;
     width: 40%;
     height: 40%;
     
