--- a/css.css
+++ b/css.css
@@ -10,12 +10,12 @@
     align-items: center;
 }
 .main {
-    
+    color:aliceblue;
     border-radius: 2%;
-    text-align: center;
     background-color:coral;
     position: absolute;
     width: 40%;
-    height: 40%;
-    
+}
+.firstbox {
+    text-align: center;
 }
