--- a/css.css
+++ b/css.css
@@ -14,17 +14,47 @@
     border-radius: 2%;
     background-color:coral;
     position: absolute;
-    width: 30%;
     position: fixed;
     overflow: hidden;
+    border: 1pt solid black;
 }
 .firstbox {
     text-align: center;
 }
+.nacl {
+    font-size: 14pt;
+    text-align: center;
+}
+.field {
+     display: flex;
+     justify-content: flex-end;
+     margin-left: 5%;
+     /*margin-right: 5%;*/
+     padding: 10px;
+}
+.field > label {
+    flex: 1;
+    
+}
+.field > form {
+    flex: 1;
+}
+.section {
+    display: flex;
+     justify-content: flex-end;
+     margin-left: 5%;
+     /*margin-right: 5%;*/
+     padding: 10px;
+}
+.section > label {
+    flex: 1;
+}
+.section > form {
+    flex: 2;
+}
 .text {
     font-size: 13pt;
-    /*border: 1pt solid black;*/
-    width: 50px;
+    width: 150px;
 }
 .textbox
 {
@@ -35,22 +65,9 @@
 }
 .forma {
     margin-right: 10%;
-    height: 25px;
+    height: 22px;
 }
-.nacl {
-    font-size: 14pt;
+.button {
     text-align: center;
-}
-.field {
-    display: flex;
-     justify-content: flex-end;
-     margin-left: 5%;
-     margin-right: 5%;
-     padding: 10px;
-}
-.field > label {
-    flex: 1;
-}
-.field > form {
-    flex: 2;
+    padding: 4%;
 }
