--- a/css.css
+++ b/css.css
@@ -63,6 +63,10 @@
     height: 15px;
     margin: 5px;
 }
+.StringOfComission
+{
+    height: 16px;
+}
 .forma {
     margin-right: 10%;
     height: 22px;
