--- a/css.css
+++ b/css.css
@@ -17,6 +17,7 @@
     position: fixed;
     overflow: hidden;
     border: 1pt solid black;
+    width: 620px;
 }
 .firstbox {
     text-align: center;
@@ -56,21 +57,28 @@
     font-size: 13pt;
     width: 150px;
 }
-.textbox
-{
-    font-size: 13pt;
-    width: 40%;
-    height: 15px;
-    margin: 5px;
+.StringSumOfCredit {
+    height: 13px;
+    margin-right: 10px;
+}
+.StringTerminOfCredit {
+    height: 13px;
+    margin-right: 10px;
+}
+.StringPercentOfCredit{
+    height: 13px;
+    margin-right: 10px;
 }
 .StringOfComission
 {
-    height: 16px;
+    height: 13px;
+    margin-right: 10px;
 }
-.forma {
-    margin-right: 10%;
-    height: 22px;
+.StringMounthComission{
+    height: 13px;
+    margin-right: 10px;
 }
+
 .button {
     text-align: center;
     padding: 4%;
