--- a/Portfolio/First WebSite/Css/css.css
+++ b/Portfolio/First WebSite/Css/css.css
@@ -35,7 +35,7 @@ header {
   .topnav a {
     color:#fff;
     text-align: center;
-    padding: 14px 18px;
+    padding: 14px 16px;
     font-size: 14px;
     font-weight: bold;
   }
@@ -44,4 +44,49 @@ header {
   }
   .topnav .icon{
       display: none;
+  }
+
+  @media screen and (max-width:1200px) {
+    nav {
+        margin-left: 20%;
+    }
+  }
+
+  @media screen and (max-width:1105px) {
+    nav {
+        margin-left: 10%;
+    }
+  }
+
+  @media screen and (max-width:1010px) {
+    .topnav a {
+        display: none;
+    }
+    .topnav .icon{
+        display: block;
+        float: right;
+        margin-top: -17px;
+        font-size: 24px;
+    }
+    nav{
+        width: 100%;
+    }
+    .topnav.responsive{
+        position: relative;
+        top: 50px;
+        left: -200px;
+    }
+    .header .topnav.responsive{
+        height: 340px;
+    }
+    .topnav.responsive a.icon{
+        position: absolute;
+        top: 50px;
+        right: -200px;
+    }
+    .topnav.responsive a{
+        float: none;
+        display: block;
+        text-align: left;
+    }
   }
