--- a/Portfolio/First WebSite/Css/css.css
+++ b/Portfolio/First WebSite/Css/css.css
@@ -124,10 +124,132 @@ header {
 .mw-100{
     min-width: 100%;
 }
-
-
-
-
+  /*Третий блок*/
+.main_team{
+    background: #000;
+    width: 100%;
+    text-align: center;
+    padding: 99px 0 165px 0;
+    color: #fff;
+}
+.main_team h1{
+    font-size: 44px;
+    padding-bottom: 31px;
+}
+.line{
+    background:#fcac45;
+    width: 98px;
+    height: 4px; 
+    position: relative;
+    margin: 0 auto 85px auto;
+}
+.card{
+    margin: 0 20px;
+}
+.photo{
+    background: #848484;
+    width: 125px;
+    height: 125px;
+    border-radius: 50%;
+    margin: 20px auto;
+}
+.team_cards{
+    display: flex;
+}
+.name{
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 7px;
+}
+.position{
+    margin-bottom: 35px;
+    font-size: 16px;
+}
+.about_position{
+    font-size: 14px;
+}
+/*Четвертій блок*/
+.main_servises{
+    text-align: center;
+}
+.main_servises .wrapper h1{
+    padding: 100px 0 34px 0;
+    font-size: 44px;
+}
+.main_servises p{
+    font-size: 16px;
+    color: #787878;
+    padding-bottom: 100px;
+}
+.services_cards{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-column-gap: 20px;
+}
+.servises_card h4{
+    font-size: 25px;
+    margin: 30px 0 20px 0;
+}
+.servises_card p{
+    font-size: 14px;
+    font-weight: 500;
+}
+/* пятый и седьмые блоки*/
+.main_clients{
+    text-align: center;
+    width: 100%;
+    background-color: #000;
+    padding: 100px 0 163px 0;
+}
+.main_clients h1{
+    color: #ffffff;
+    margin-bottom: 31px;
+    font-size: 44px;
+    font-weight: normal;
+}
+.client{
+    font-weight:600;
+}
+.clients{
+    margin: 114px 5px 0 5px;
+}
+.main_clients img{
+    margin: 0 15px 50px 15px;
+}
+.main_testimonials{
+    text-align: center;
+    width: 100%;
+    background-color: #000;
+    padding: 103px 0 176px 0;
+}
+.main_testimonials h1{
+    color: #ffffff;
+    font-size: 44px;
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+}
+.testimonials{
+    margin: 0 auto 0 auto;
+    width: 63%;
+    height: auto;
+}
+.main_testimonials .testimonials p{
+    
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 600;
+}
+.upper{
+    text-transform: uppercase;
+}
+.ptext{
+    margin-top: 52px;
+    text-transform:none
+}
+.normal{
+    font-weight: normal;
+}
 
 
 
@@ -170,6 +292,7 @@ header {
     }
   }
 
+
   @media screen and (max-width:1010px) {
     .topnav a {
         display: none;
@@ -206,7 +329,7 @@ header {
 
     /*Адаптирование блоков*/
     main .main__welcome{
-        padding: 50px 0 50px 0;
+        padding: 100px 0 200px 0;
     }
     main .main__welcome h1{
         font-size: 25px;
@@ -223,5 +346,32 @@ header {
     main .wrapper .about_right h1{
         margin-top: 10px;
         font-size: 20px;
+    }
+    .team_cards{
+        flex-direction: column;
+    }
+    .main_team h1{
+        font-size: 25px;
+    }
+    
+    .services_cards{
+        grid-template-columns: auto;
+    }
+    .main_servises .wrapper h1{
+        font-size: 25px;
+    }
+    
+    .servises_card h4{
+        font-size: 19px;
+    }
+    .main_clients h1{
+        font-size: 25px;
+    }
+    .main_testimonials h1{
+        font-size: 25px;
+    }
+    .main_testimonials .testimonials p{
+    
+        font-size: 14px;
     }
   }
