--- a/Portfolio/First WebSite/Css/css.css
+++ b/Portfolio/First WebSite/Css/css.css
@@ -77,7 +77,7 @@ header {
     font-weight: 700;
   }
   .wrapper{
-      width: 76%;
+      width: 67%;
       margin: 0 auto;
   }
   .main__about{
@@ -250,10 +250,88 @@ header {
 .normal{
     font-weight: normal;
 }
-
-
-
-
+/*шестой блок*/
+.main_work{
+    text-align: center;
+    padding: 100px 0 100px 0;
+    width: 100%;
+}
+.main_work h1{
+    margin-bottom: 32px;
+    font-size: 44px;
+}
+.main_work p{
+    font-size: 16px;
+    font-style: italic;
+    color: #6c6c6c;
+    margin-bottom: 150px;
+}
+.galery{
+    text-align: center;
+}
+.galery_photos{
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-top: 30px;
+}
+.galery_photos:hover{
+    opacity: 0.9;
+}
+/*седьмой блок форма*/
+.contacts{
+    text-align: center;
+}
+.contacts h1 {
+    font-size: 44px;
+    margin-bottom: 30px;
+}
+.contacts p{
+    margin: -27px 0 100px 0;
+    font-size: 16px;
+    color: #787878;
+}
+.contact_wrapper{
+    width: 754px;
+    margin: 0 auto;
+    padding: 100px 0 100px 0;
+}
+.form_imputs{
+    display: flex;
+}
+.form_imputs p{
+    font-size: 14px;
+}
+.red{
+    color: red;
+}
+input{
+    width: 360px;
+    height: 40px;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+textarea{
+    width: 100%;
+    height: 163px;
+    margin-bottom: 31px;
+}
+input, textarea {
+    border: 1px solid #999999;
+}
+.button_block{
+    display: flex;
+    justify-content: flex-end;
+}
+input:first-of-type{
+    margin-right: 32px;
+}
+input[type=submit]{
+    height: 40px;
+    width: 165px;
+    background: #fcac45;
+    color: white;
+    margin-right: 0;
+}
   @media screen and (max-width:1320px) {
     nav {
         margin-left: 20%;
@@ -292,7 +370,14 @@ header {
     }
   }
 
-
+  @media screen and (max-width:1280px){
+    .mw-100{
+        max-width: 100%;
+    }
+    .servises_card h4{
+        font-size: 20px;
+    }
+  }
   @media screen and (max-width:1010px) {
     .topnav a {
         display: none;
@@ -350,28 +435,61 @@ header {
     .team_cards{
         flex-direction: column;
     }
+    .main_team{
+        padding: 50px 0 50px;
+    }
     .main_team h1{
         font-size: 25px;
+        padding-bottom: 20px;
     }
-    
+    .line{
+        margin-bottom: 25px;
+    }
     .services_cards{
         grid-template-columns: auto;
     }
     .main_servises .wrapper h1{
+        padding: 50px 0 20px 0;
         font-size: 25px;
     }
-    
+    .main_servises p{
+        padding-bottom: 30px;
+    }
     .servises_card h4{
         font-size: 19px;
     }
+    .main_clients{
+        padding: 50px 0 0 0;
+    }
     .main_clients h1{
         font-size: 25px;
+        margin-bottom: 25px;
+    }
+    .clients{
+        margin: 50px 5px 0 5px;
+    }
+    .main_clients img{
+        margin: 0 15px 50px 0;
+    }
+    .main_testimonials{
+        padding: 50px 0 25px 0;
     }
     .main_testimonials h1{
         font-size: 25px;
     }
     .main_testimonials .testimonials p{
-    
         font-size: 14px;
+        margin-bottom: 25px;
+    }
+    .line1 img:not(:first-child){
+        display: none;
+    }
+    .main_work{
+        padding: 25px 0 50px 0;
+    }
+    .main_work h1{
+        font-size: 25px;
+        margin-bottom: 25px;
+
     }
   }
