--- a/Portfolio/First WebSite/Styles/css.css
+++ b/Portfolio/First WebSite/Styles/css.css
@@ -313,13 +313,13 @@ header {
     color: red;
 }
 input{
-    width: 320px;
+    width: 362px;
     height: 40px;
     font-size: 20px;
     margin-bottom: 30px;
 }
 textarea{
-    width: 100%;
+    width: 754px;
     height: 163px;
     margin-bottom: 31px;
 }
@@ -354,8 +354,22 @@ input[type=submit]{
 .social img:hover {
     opacity: 0.6;
 }
-
+@media screen and (max-width:1429px) {
+    input{
+        width: 330px;
+    }
+    textarea{
+        width: 695px;
+    }
+}
   @media screen and (max-width:1320px) {
+    input{
+        width: 299px;
+    }
+    textarea{
+        width: 630px;
+    }
+}
     nav {
         margin-left: 20%;
     }
@@ -368,6 +382,12 @@ input[type=submit]{
   }
 
   @media screen and (max-width:1205px) {
+    input{
+        width: 299px;
+    }
+    textarea{
+        width: 630px;
+    }
     nav {
         margin-left: 10%;
     }
@@ -391,6 +411,7 @@ input[type=submit]{
     .about_right li{
         text-align: left;
     }
+
   }
 
   @media screen and (max-width:1280px){
@@ -524,18 +545,14 @@ input[type=submit]{
     .contact_wrapper{
         width: 80%;
         margin: 0 auto;
-        /*padding: 100px 0 100px 0;*/
     }
-    .right {
-        margin-right: 30%;
-        border: 1px solid black;
-    }
+
+  }
+  @media screen and (max-width:1100px) {
     input{
-        padding-right: 0;
-        width: 100%;
+        width: 250px;
     }
-    .left {
-        margin-left: 30%;
-        border: 1px solid black;
+    textarea{
+        width: 534px;
     }
   }
