--- a/Portfolio/First WebSite/Styles/css.css
+++ b/Portfolio/First WebSite/Styles/css.css
@@ -384,6 +384,12 @@ input[type=submit]{
   }
 
   @media screen and (max-width:1205px) {
+
+    .galery_photos{
+        margin-right: 10%;
+        margin-left: 10%;
+        margin-top: 30px;
+    }
     input{
         width: 299px;
     }
@@ -558,7 +564,12 @@ input[type=submit]{
     .form_imputs{
         flex-direction: column;
     }
-
+    .main_work {
+        padding: 25 px 0 50px 0;
+    }
+    .main_work p{
+        margin-bottom: 20px;
+    }
   }
   @media screen and (max-width:1100px) {
     input{
