--- a/Portfolio/First WebSite/Styles/css.css
+++ b/Portfolio/First WebSite/Styles/css.css
@@ -297,6 +297,7 @@ header {
     width: 50%;
     margin: 0 auto;
     padding: 100px 0 100px 0;
+    
 }
 /*************/
 .form_imputs{
@@ -552,7 +553,9 @@ input[type=submit]{
     }
     .contact_wrapper{
         width: 80%;
+        padding: 25px 0 20px 0;
         margin: 0 auto;
+
     }
     input{
         height: 30px;
@@ -570,9 +573,18 @@ input[type=submit]{
     .main_work p{
         margin-bottom: 20px;
     }
+    .contacts h1 {
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
+    .contacts p{
+        margin: 20px 0 30px 0;
+    }
   }
   @media screen and (max-width:1100px) {
+
     input{
+        
         width: 700px;
     }
     textarea{
