--- a/Portfolio/Test Yanovsky/styles.css
+++ b/Portfolio/Test Yanovsky/styles.css
@@ -456,6 +456,11 @@ button:hover {
                 margin-top: 20px;
             }
         }
+        @media screen and (max-width:690px) {
+            .secondcontainerlist{
+                width: 100%;
+            }
+        }
         .secondcontainerlistul {
             line-height: 1;
             list-style-image: url(images/Vector.png);
@@ -536,11 +541,37 @@ button:hover {
     background: url(images/Rectangle142.png);
     padding-bottom: 109px;
 }
+.block3-main{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-top: 86px;
+}
+.block3-left{
+    width: 50%;
+}
+.block3-right{
+    width: 50%;
+    margin-left: 97px;
+}
+@media screen and (max-width:690px) {
+    .block3-main{
+        flex-direction: column;
+        align-items: center;
+    }
+    .block3-left{
+        width: 90%;
+    }
+    .block3-right{
+        width: 90%;
+        margin-left: 0px;
+    }
+} 
         .thirdcontainertextsec p {
-            padding-top: 86px;
+            /* padding-top: 86px; */
             width: 680px;
             height: 82px;
-            margin-top: 86px;
+            /* margin-top: 86px; */
             margin-left: 102px;
             margin-bottom: 41px;
             font-family: 'Cera Pro';
@@ -550,9 +581,43 @@ button:hover {
             line-height: 120%;
             color: #FFFFFF;
         }
+        @media screen and (max-width:1386px) {
+            .thirdcontainertextsec p {
+                width: 680px;
+                height: 82px;
+                font-size: 28px;
+                line-height: 120%;
+            }
+        } 
+         @media screen and (max-width:1054px) {
+            .thirdcontainertextsec p{
+                width: 550px;
+                font-size: 24px;
+            }
+        }
+        @media screen and (max-width:860px) {
+            .thirdcontainertextsec p{
+                width: 450px;
+                font-size: 22px;
+            }
+        }
+        @media screen and (max-width:780px) {
+            .thirdcontainertextsec p{
+                width: 350px;
+                font-size: 20px;
+            }
+        }
+         @media screen and (max-width:690px) {
+            .thirdcontainertextsec p {
+                text-align: center;
+                font-size: 24px;
+                width: 100%;
+                margin-left:0px;
+            }
+        }   
         .thirdcontainerdesk{
             background: url(images/Rectangle145.png);
-            width: 750px;
+            width: 90%;
             height: 210px;
             margin-left: 102px;
             border: 1px solid #61C8FF;
@@ -566,6 +631,31 @@ button:hover {
             color: #FFFFFF;
             text-align: center;
         }
+        @media screen and (max-width:1256px) {
+            .thirdcontainerdesk p{
+                font-size: 22px;
+                line-height: 120%;
+            }
+        } 
+        @media screen and (max-width:1056px) {
+            .thirdcontainerdesk p{
+                font-size: 20px;
+                line-height: 120%;
+            }
+        } 
+        @media screen and (max-width:900px) {
+            .thirdcontainerdesk p{
+                font-size: 18px;
+                line-height: 120%;
+            }
+        } 
+        @media screen and (max-width:690px) {
+            .thirdcontainerdesk{
+                width: 100%;
+                margin-left: 0px;
+                
+            }
+        }   
         .imagecontainercurency{
             display: flex;
             justify-content: center;
@@ -602,7 +692,7 @@ button:hover {
             background: url(images/$0.png) no-repeat;
         }
         .thirdcontainerdesktwo{
-            width: 750px;
+            width: 90%;
             height: 190px;
             left: 195px;
             margin-top: 37px;
@@ -618,11 +708,36 @@ button:hover {
             color: #FFFFFF;
             text-align: center;
         }
+        @media screen and (max-width:1256px) {
+            .thirdcontainerdesktwo p{
+                font-size: 22px;
+                line-height: 120%;
+            }
+        } 
+        @media screen and (max-width:1056px) {
+            .thirdcontainerdesktwo p{
+                font-size: 20px;
+                line-height: 120%;
+            }
+        } 
+        @media screen and (max-width:900px) {
+            .thirdcontainerdesktwo p{
+                font-size: 18px;
+                line-height: 120%;
+            }
+        } 
+        @media screen and (max-width:690px) {
+            .thirdcontainerdesktwo{
+                width: 100%;
+                margin-left: 0px;
+                
+            }
+        }  
         .thirdcontainerextern{
             width: 341px;
             height: 36px;
-            margin-left: 890px;
-            margin-top: -450px;
+            /* margin-left: 890px; */
+            margin-top: 125px; 
             font-family: 'Cera Pro';
             font-style: normal;
             font-weight: 500;
@@ -630,11 +745,33 @@ button:hover {
             line-height: 120%;
             color: #FFFFFF;
         }
+        @media screen and (max-width:1256px) {
+            .thirdcontainerextern{
+                font-size: 25px;
+            }
+        } 
+        @media screen and (max-width:1056px) {
+            .thirdcontainerextern{
+                font-size: 23px;
+            }
+        } 
+        @media screen and (max-width:900px) {
+            .thirdcontainerextern{
+                font-size: 20px;
+            }
+        } 
+        @media screen and (max-width:690px) {
+            .thirdcontainerextern{
+                width: 100%;
+                text-align: center;
+                margin-top: 25px; 
+            }
+        } 
         .thirdcontainerlistul {
             line-height: 5%;
             list-style-image: url(images/check.png);
             width: 704px;
-            margin-left: 460px;
+            /* margin-left: 460px; */
             margin-top: 37px;
             font-family: 'Cera Pro';
             font-style: normal;
@@ -643,9 +780,51 @@ button:hover {
             line-height: 150%;
             color: #FFFFFF;
         }
+        @media screen and (max-width:1575px) {
+            .thirdcontainerlistul{
+                width: 604px;
+                font-size: 24px;
+            }
+        } 
+        @media screen and (max-width:1335px) {
+            .thirdcontainerlistul{
+                width: 504px;
+                font-size: 22px;
+            }
+        } 
+        @media screen and (max-width:1215px) {
+            .thirdcontainerlistul{
+                width: 404px;
+                font-size: 20px;
+            }
+        } 
+        @media screen and (max-width:900px) {
+            .thirdcontainerlistul{
+                width: 304px;
+                font-size: 18px;
+            }
+        } 
+        @media screen and (max-width:820px) {
+            .thirdcontainerlistul{
+                width: 204px;
+                font-size: 16px;
+            }
+        }
+        @media screen and (max-width:690px) {
+            .thirdcontainerlistul{
+                width: 100%;
+                font-size: 16px;
+            }
+        }
         .bluespanConteinertree{
             color: #61C8FF;
             font-family: 'Cera Pro bold';
+        }
+        .block3-button{
+            display: flex;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
         }
         .thirdcontainerbutton{
             display: flex;
@@ -656,7 +835,7 @@ button:hover {
             gap: 10px;
             width: 277px;
             height: 63px;
-            margin-left: 750px;
+            /* margin-left: 750px; */
             margin-top: 102px;
             background: #61C8FF;
         }
